[package]
name = "channel-practice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "p1"
path = "src/bin/p1.rs"

[[bin]]
name = "p2"
path = "src/bin/p2.rs"

[[bin]]
name = "p3"
path = "src/bin/p3.rs"

[dependencies]
