[package]
name = "inges"
version = "0.2.0"
edition = "2021"
description = "A basic clap command line tool implementation"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
toml = "0.5.9"